--- a/views/coursesNEET.ejs
+++ b/views/coursesNEET.ejs
@@ -263,7 +263,7 @@
 
     <%- include('./layout/footer') %>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-    <script src="javascripts/common.js"></script>
+    <!-- <script src="javascripts/common.js"></script> -->
     <script src="javascripts/courses.js"></script>
     
   </body>
