--- a/views/admin/successstories/testimonials.ejs
+++ b/views/admin/successstories/testimonials.ejs
@@ -100,6 +100,7 @@
             <thead>
               <tr>
                 <th scope="col">Image</th>
+                <th scope="col">Name</th>
                 <th scope="col">Youtube link</th>
                 <th scope="col">Update</th>
               </tr>
@@ -115,6 +116,9 @@
                   <span class="currentSliderimgurl"><%= i.studentimg %></span>
                 </td>
 
+                <td>
+                  <p><%= i.studentname %></p>
+                </td>
                 <td>
                   <p><%= i.youtubelink %></p>
                 </td>
