--- a/public/stylesheets/aboutus.css
+++ b/public/stylesheets/aboutus.css
@@ -790,8 +790,8 @@ button {
 .previewImg {
   position: fixed;
   display: none;
-    height: 100vh;
-    width: 100vw;
+    height: 100%;
+    width: 100%;
     background-color: rgba(0, 0, 0, 0.8);
     backdrop-filter: blur(10px);
     z-index: 100;
