--- a/views/successStories2.ejs
+++ b/views/successStories2.ejs
@@ -21,7 +21,7 @@
             src="<%= student.studentimg %>"
             alt=""
           />
-          <h3>PRIYA</h3>
+          <h3><%= student.studentname %></h3>
           <iframe
             class="video"
             width="560"
@@ -34,64 +34,8 @@
           ></iframe>
         </div>
       <% }) %>
-        <div class="card">
-          <img
-            class="profile"
-            src="../images/successStories/success_img_2.png"
-            alt=""
-          />
-          <h3>PRIYA</h3>
-          <iframe
-          class="video"
-            width="560"
-            height="315"
-            src="https://www.youtube.com/embed/OUQ1FXrOJKA"
-            title="YouTube video player"
-            frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen
-          ></iframe>
-        </div>
-        <div class="card">
-          <img
-            class="profile"
-            src="../images/successStories/success_img_3.png"
-            alt=""
-          />
-          <h3>PRIYA</h3>
-          <iframe 
-          class="video"
-
-            width="560"
-            height="315"
-            src="https://www.youtube.com/embed/OUQ1FXrOJKA"
-            title="YouTube video player"
-            frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen
-          ></iframe>
-        </div>
-        <div class="card">
-          <img
-            class="profile"
-            src="../images/successStories/success_img_3.png"
-            alt=""
-          />
-          <h3>PRIYA</h3>
-          <iframe 
-          class="video"
-
-            width="560"
-            height="315"
-            src="https://www.youtube.com/embed/OUQ1FXrOJKA"
-            title="YouTube video player"
-            frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen
-          ></iframe>
-        </div>
-        
       </div>
+        
       
       <!-- <img class="vector" src="../images/successStories/Vector 9.png" alt="" /> -->
     </section>
