--- a/views/successStories2.ejs
+++ b/views/successStories2.ejs
@@ -40,5 +40,6 @@
       <!-- <img class="vector" src="../images/successStories/Vector 9.png" alt="" /> -->
     </section>
     <%- include('./layout/footer') %>
+    <script src="javascripts/common.js"></script>
   </body>
 </html>
