--- a/views/courses.ejs
+++ b/views/courses.ejs
@@ -1,27 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="courses.css">
-    <title>Courses</title>
-</head>
-<body>
-    <%- include('./layout/header') %>
-    <section class="coursesneet">
-      
-        <img src="../img/courses/neet.jpg" class="neetimage" alt="/">
-        <span class="h1andh2">
-          <h1 class="headh1h2"><b>COURSES</b></h1> 
-           <h2 class="headh1h2"><b>IIT-JEE</b></h2>
-        </span>
-      
-        <svg xmlns="http://www.w3.org/2000/svg" class="leftarrow" viewBox="0 0 20 20" fill="currentColor">
-          <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm.707-10.293a1 1 0 00-1.414-1.414l-3 3a1 1 0 000 1.414l3 3a1 1 0 001.414-1.414L9.414 11H13a1 1 0 100-2H9.414l1.293-1.293z" clip-rule="evenodd" />
-        </svg>
-    
-    </section>
-    
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="courses.css" />
+		<title>Courses</title>
+	</head>
+	<body>
+		<%- include('./layout/header') %>
+		<section class="coursesneet">
+			<img src="../img/courses/neet.jpg" class="neetimage" alt="/" />
+			<span class="h1andh2">
+				<h1 class="headh1h2"><b>COURSES</b></h1>
+				<h2 class="headh1h2"><b>IIT-JEE</b></h2>
+			</span>
+
+			<svg
+				xmlns="http://www.w3.org/2000/svg"
+				class="leftarrow"
+				viewBox="0 0 20 20"
+				fill="currentColor"
+			>
+				<path
+					fill-rule="evenodd"
+					d="M10 18a8 8 0 100-16 8 8 0 000 16zm.707-10.293a1 1 0 00-1.414-1.414l-3 3a1 1 0 000 1.414l3 3a1 1 0 001.414-1.414L9.414 11H13a1 1 0 100-2H9.414l1.293-1.293z"
+					clip-rule="evenodd"
+				/>
+			</svg>
+		</section>
+	</body>
 </html>
