--- a/views/demovideos.ejs
+++ b/views/demovideos.ejs
@@ -1,17 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="stylesheets/demovideos.css" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <title>Demo Videos</title>
-</head>
-<body>
-    <%- include('./layout/header') %>
-    <section class="Getyourvideos">
-        <!-- <div class="video">
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="stylesheets/demovideos.css" />
+		<link
+			href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+			rel="stylesheet"
+			integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+			crossorigin="anonymous"
+		/>
+		<link rel="stylesheet" href="stylesheets/chatbot.css" />
+
+		<title>Demo Videos</title>
+	</head>
+	<body>
+		<%- include('./layout/header') %> <%- include('./chatbot') %>
+
+		<section class="Getyourvideos">
+			<!-- <div class="video">
             <p>Get your demo videos here</p>
         </div>
         <span class="stream1">
@@ -38,18 +46,65 @@
       <span class="stream4">
         <button>Reset</button>
       </span> -->
-    </section>
-    <section class="gridcontainer">
-      <iframe class="griditem"  src="https://www.youtube.com/embed/CTl666v3Mg0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-      <iframe class="griditem"  src="https://www.youtube.com/embed/IoWJyknZCsQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            <iframe class="griditem"  src="https://www.youtube.com/embed/XSbdRz_zbOA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            <iframe class="griditem"  src="https://www.youtube.com/embed/lW2HD9hQeBA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            <iframe class="griditem" src="https://www.youtube.com/embed/JVwXBCBK1tQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            <iframe class="griditem"  src="https://www.youtube.com/embed/mnvetllGUj0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    </section>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    <script src="../javascripts/courses.js"></script>
-    <script src="../javascripts/common.js"></script>
-    <%- include('./layout/footer') %>
-</body>
+		</section>
+		<section class="gridcontainer">
+			<iframe
+				class="griditem"
+				src="https://www.youtube.com/embed/CTl666v3Mg0"
+				title="YouTube video player"
+				frameborder="0"
+				allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+				allowfullscreen
+			></iframe>
+			<iframe
+				class="griditem"
+				src="https://www.youtube.com/embed/IoWJyknZCsQ"
+				title="YouTube video player"
+				frameborder="0"
+				allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+				allowfullscreen
+			></iframe>
+			<iframe
+				class="griditem"
+				src="https://www.youtube.com/embed/XSbdRz_zbOA"
+				title="YouTube video player"
+				frameborder="0"
+				allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+				allowfullscreen
+			></iframe>
+			<iframe
+				class="griditem"
+				src="https://www.youtube.com/embed/lW2HD9hQeBA"
+				title="YouTube video player"
+				frameborder="0"
+				allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+				allowfullscreen
+			></iframe>
+			<iframe
+				class="griditem"
+				src="https://www.youtube.com/embed/JVwXBCBK1tQ"
+				title="YouTube video player"
+				frameborder="0"
+				allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+				allowfullscreen
+			></iframe>
+			<iframe
+				class="griditem"
+				src="https://www.youtube.com/embed/mnvetllGUj0"
+				title="YouTube video player"
+				frameborder="0"
+				allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+				allowfullscreen
+			></iframe>
+		</section>
+		<script
+			src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+			integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+			crossorigin="anonymous"
+		></script>
+		<script src="../javascripts/courses.js"></script>
+		<script src="../javascripts/common.js"></script>
+		<%- include('./layout/footer') %>
+		<script src="javascripts/chatbot.js"></script>
+	</body>
 </html>
