--- a/views/chatbot.ejs
+++ b/views/chatbot.ejs
@@ -15,15 +15,10 @@
 			<span class="chat-span">Hello, scholar</span>
 		</div>
 		<div class="each-chat bot">
-			<img src="../images/chatbot/chatbot1.png" alt="" /><input
-				type="text"
-				placeholder="Name"
-				maxlength="30"
-				minlength="3"
-				autofocus
-				required
-				id="client_name"
-			/>
+			<img src="../images/chatbot/chatbot1.png" alt="" />
+			<span class="chat-span">Enter your name</span>
+		</div>
+		<div class="each-chat client">
 			<span>
 				<svg
 					xmlns="http://www.w3.org/2000/svg"
@@ -38,6 +33,15 @@
 					/>
 				</svg>
 			</span>
+			<input
+				type="text"
+				placeholder="Name"
+				maxlength="30"
+				minlength="3"
+				autofocus
+				required
+				id="client_name"
+			/>
 		</div>
 	</div>
 	<div class="chat-footer">
