--- a/views/contactus.ejs
+++ b/views/contactus.ejs
@@ -112,10 +112,11 @@
 							<label for="message">Comment</label>
 							<textarea
 								name="message"
-								class="form-input"
+								class="form-input comment-input"
 								id="message"
 								
 							></textarea>
+							<div class="commentError"></div>
 						</div>
 						<div class="button-container">
 							<button class="submit">Submit</button>
