--- a/public/stylesheets/common.css
+++ b/public/stylesheets/common.css
@@ -154,10 +154,16 @@ body {
     transform: translateX(100%);
     flex-direction: column;
     align-items: center;
-    justify-content: space-between;
+    justify-content: flex-start;
+    
     z-index: 30;
     width: 50%;
     transition: transform .5s ease-in;
+    
+  }
+  .navlinks li {
+    
+    margin: 1.5rem 0rem;
     
   }
   .display-flex {
