--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -7,12 +7,13 @@
     <title>Admin panel</title>
     <link rel="stylesheet" href="stylesheets/adminheader.css"/>
     <link rel="stylesheet" href="stylesheets/admin.css"/>
-
+    <link rel="stylesheet" href="stylesheets/chatbot.css" />
 </head>
 <body>
 
 
     <%- include('./layout/adminheader') %>
+    <%- include('./chatbot') %>
     <section class="dashboard">
     <div class="MenuBar">
         <ul>
@@ -222,5 +223,6 @@
           
     </section>   
     <script src="javascripts/adminPanel.js"></script>
+    <script src="javascripts/chatbot.js"></script>
 </body>
 </html>
