--- a/views/courses.ejs
+++ b/views/courses.ejs
@@ -5,10 +5,11 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="courses.css" />
+		<link rel="stylesheet" href="stylesheets/chatbot.css" />
 		<title>Courses</title>
 	</head>
 	<body>
-		<%- include('./layout/header') %>
+		<%- include('./layout/header') %> <%- include('./chatbot') %>
 		<section class="coursesneet">
 			<img src="../img/courses/neet.jpg" class="neetimage" alt="/" />
 			<span class="h1andh2">
@@ -29,5 +30,6 @@
 				/>
 			</svg>
 		</section>
+		<script src="javascripts/chatbot.js"></script>
 	</body>
 </html>
