--- a/views/admin/successstories/testimonials.ejs
+++ b/views/admin/successstories/testimonials.ejs
@@ -95,7 +95,7 @@
           class="imgform"
         >
           <h1 class="m-5">Sucess Stories</h1>
-
+ 
           <table class="table" style="width: 70%">
             <thead>
               <tr>
@@ -146,6 +146,7 @@
           </div>
         </form>
       </div>
+      <div></div>
     </section>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
