--- a/public/stylesheets/chatbot.css
+++ b/public/stylesheets/chatbot.css
@@ -28,12 +28,14 @@
 
 .chat {
 	width: 18rem;
-	height: 0;
+	transform: scaleY(0);
 	/* background: white linear-gradient( 
 180deg, #e11013 0%, rgba(225, 16, 19, 0.73) 27.6%, rgba(225, 16, 19, 0.55) 52.08%, rgba(225, 16, 19, 0.219411) 78.06%, rgba(225, 16, 19, 0) 100% ); */
 	position: fixed;
 	bottom: 0;
-	background: rgb(23 152 202);
+	/* background: rgb(23 152 202); */
+	background: linear-gradient(to bottom, #efe81e, white);
+	border: 3px solid black;
 	right: 0;
 	z-index: 15;
 	margin-right: 3rem;
@@ -42,10 +44,11 @@
 	transition: all 0.3s ease-in-out;
 	overflow: hidden;
 	border-radius: 10px;
+	height: 51vh;
 }
 
 .chat.open {
-	height: 50vh;
+	transform: scaleY(1);
 }
 
 .chat-nav {
@@ -56,7 +59,6 @@
 }
 
 .chat-nav h1 {
-	color: white;
 	font-size: 1rem;
 	margin-right: 1rem;
 }
@@ -149,6 +151,7 @@
 	width: 2rem;
 	height: 2rem;
 	margin-right: 0.5rem;
+	margin-left: 0.3rem;
 }
 
 .chat-body .each-chat input {
@@ -210,7 +213,7 @@
 }
 
 .stream.read-more {
-	background-color: white;
+	background-color: black;
 	padding: 0.5rem;
 	width: 55%;
 	margin: 0.5rem;
@@ -219,6 +222,13 @@
 	font-size: 0.8rem;
 	font-weight: 400;
 	cursor: pointer;
+	color: white;
+	transition: all 0.3s ease-in-out;
+}
+
+.stream.read-more:hover {
+	background-color: white;
+	color: black;
 }
 
 .chat-footer {
@@ -231,7 +241,7 @@
 
 .chat-footer a {
 	width: 50%;
-	background: white;
+	background: #711396;
 	border-radius: 10px;
 	padding: 0.5rem 1rem;
 	display: inline-block;
@@ -239,8 +249,13 @@
 	margin: 0.5rem;
 	cursor: pointer;
 	text-decoration: none;
-	color: black;
+	color: white;
 	font-weight: 600;
+}
+
+.chat-footer a:hover {
+	background: white;
+	color: black;
 }
 
 .chat-footer a:nth-of-type(1) {
