--- a/views/chatbot.ejs
+++ b/views/chatbot.ejs
@@ -1,21 +1,21 @@
 <div class="bot-img"></div>
 <div class="chat">
 	<div class="chat-nav">
-		<img src="../images/chatbot/chatbot1.png" alt="" />
+		<img src="../images/chatbot/chatbot1_edited.png" alt="" />
 		<h1>Classic NEET Academy <br /><span>Automated Chat</span></h1>
-		<img src="../images/chatbot/chatbot_reset.png" class="chat_reset" />
+		<img src="../images/chatbot/chatbot_reset1.png" class="chat_reset" />
 		<span
 			><span class="chat_close">X</span>
-			<img src="../images/chatbot/chatbot_close.png"
+			<img src="../images/chatbot/chatbot_close1.png"
 		/></span>
 	</div>
 	<div class="chat-body">
 		<div class="each-chat bot">
-			<img src="../images/chatbot/chatbot1.png" alt="" />
+			<img src="../images/chatbot/chatbot1_edited.png" alt="" />
 			<span class="chat-span">Hello, scholar</span>
 		</div>
 		<div class="each-chat bot">
-			<img src="../images/chatbot/chatbot1.png" alt="" />
+			<img src="../images/chatbot/chatbot1_edited.png" alt="" />
 			<span class="chat-span">Enter your name</span>
 		</div>
 		<div class="each-chat client">
@@ -25,6 +25,7 @@
 					viewBox="0 0 20 20"
 					fill="currentColor"
 					id="name_svg"
+					style="color: #711396"
 				>
 					<path
 						fill-rule="evenodd"
