--- a/public/stylesheets/chatbot.css
+++ b/public/stylesheets/chatbot.css
@@ -27,7 +27,7 @@
 }
 
 .chat {
-	width: 18rem;
+	width: 19rem;
 	transform: scaleY(0);
 	/* background: white linear-gradient( 
 180deg, #e11013 0%, rgba(225, 16, 19, 0.73) 27.6%, rgba(225, 16, 19, 0.55) 52.08%, rgba(225, 16, 19, 0.219411) 78.06%, rgba(225, 16, 19, 0) 100% ); */
@@ -44,7 +44,7 @@
 	transition: all 0.3s ease-in-out;
 	overflow: hidden;
 	border-radius: 10px;
-	height: 51vh;
+	transform-origin: bottom;
 }
 
 .chat.open {
@@ -64,7 +64,8 @@
 }
 
 .chat-nav h1 span {
-	color: #dddddd;
+	/* color: #dddddd; */
+	color: black;
 	font-size: 0.8rem;
 }
 
@@ -114,6 +115,7 @@
 	display: flex;
 	flex-direction: column;
 	scroll-behavior: smooth;
+	margin-bottom: 3rem;
 }
 
 .chat-body::-webkit-scrollbar {
@@ -241,7 +243,7 @@
 
 .chat-footer a {
 	width: 50%;
-	background: #711396;
+	/* background: #711396; */
 	border-radius: 10px;
 	padding: 0.5rem 1rem;
 	display: inline-block;
@@ -249,6 +251,8 @@
 	margin: 0.5rem;
 	cursor: pointer;
 	text-decoration: none;
+	/* color: white; */
+	background-color: black;
 	color: white;
 	font-weight: 600;
 }
