--- a/views/layout/adminheader.ejs
+++ b/views/layout/adminheader.ejs
@@ -1,15 +1,16 @@
+
 <!-- Header session -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container-fluid justify-content-space-between">
-      <a class="navbar-brand" href="#"><img style="width: 60px; height: 50px;" src="../../images/home/classic-nee-tacademy-logo.png" alt="logo"></a>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+  <div class="container-fluid justify-content-space-between">
+    <a class="navbar-brand" href="#"><img style="width: 60px; height: 50px;" src="../../images/home/classic-nee-tacademy-logo.png" alt="logo"></a>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto ms">
           <li class="nav-item">
             <a class="nav-link active d-flex justify-content-center"" aria-current="page" href="#"><b>Classic Neet Academy Admin Dashboard</b> </a>
           </li>
         </ul>
         <ul class="navbar-nav justify-content-end">
-        <li class="nav-item dropdown">
+          <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               Super Admin
             </a>
@@ -22,3 +23,22 @@
     </div>
   </nav>
 
+  
+  <% if(success && success.length) {%>
+    <div class="alert alert-success alert-dismissible fade show" role="alert">
+        <%= success %>
+        <%= console.log("hello"); %> 
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true"></span>
+        </button>
+    </div>
+  <% } %>
+    
+  <% if(error && error.length) {%>
+    <div class="alert alert-danger alert-dismissible fade show" role="alert">
+        <%= error %>
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true"></span>
+        </button>
+    </div>
+  <% } %>
