--- a/views/layout/header.ejs
+++ b/views/layout/header.ejs
@@ -26,6 +26,7 @@
 		<li class="contactNav">
 			<a class="even" href="/contactus"><b>Contact Us</b></a>
 		</li>
+		<li class="dark-mode-toggle"></li>
 	</ul>
 	<div class="hamburger">
 		<div class="line1"></div>
