--- a/views/layout/header.ejs
+++ b/views/layout/header.ejs
@@ -9,7 +9,7 @@
 			<a class="even" href="/"><b>Home</b></a>
 		</li>
 		<li class="courseNav">
-			<a class="odd" href="/home#courses"><b>Courses</b></a>
+			<a class="odd" href="/#courses"><b>Courses</b></a>
 		</li>
 		<li class="aboutNav">
 			<a class="even" href="/Aboutus"><b>About Us</b></a>
