--- a/views/login.ejs
+++ b/views/login.ejs
@@ -20,14 +20,14 @@
         <h1>LOGIN</h1>
       </div>
       <div class="Username">
-        <label for="username">Username</label>
-        <input type="text" placeholder="username" name="username" id="username" />
+        <label for="username">Enter your username</label>
+        <input type="text" placeholder="Username" name="username" id="username" />
       </div>
       <div class="Username">
-        <label for="password">password</label>
+        <label for="password">Enter your password</label>
         <input
           type="password"
-          placeholder="password"
+          placeholder="Password"
           name="password"
           id="password"
         />
