--- a/views/404error.ejs
+++ b/views/404error.ejs
@@ -20,7 +20,7 @@
             <p>Something Went Wrong</p>
         </div>
         <div class="button">
-            <button type="button">Go Back To Home</button>
+            <button type="button" onclick="window.location.href='/'">Go Back To Home</button>
         </div>
     </section>
 </body>
