--- a/views/admin/courses/courseNEET.ejs
+++ b/views/admin/courses/courseNEET.ejs
@@ -49,7 +49,7 @@
     </div>
     <%- include('../../layout/adminheader') %>
     <section class="mainsection">
-      <div class="left"><%- include('../../layout/adminSidebar') %></div>
+      <div class="left"><%- include('../../layout/adminSideBar') %></div>
       <div class="right">
         <div class="preview">
           <h1 class="mb-5">COURSE-NEET</h1>
