--- a/views/admin/aboutus/history.ejs
+++ b/views/admin/aboutus/history.ejs
@@ -65,7 +65,7 @@
     </div>
     <%- include('../../layout/adminheader') %>
     <section class="mainsection">
-      <div class="left"><%- include('../../layout/adminSidebar') %></div>
+      <div class="left"><%- include('../../layout/adminSideBar') %></div>
       <div class="right">
         <div class="preview">
           <h1 class="mb-5">History</h1>
