--- a/views/admin/demovideos/Demovideos.ejs
+++ b/views/admin/demovideos/Demovideos.ejs
@@ -19,7 +19,7 @@
     <a href="#buttonid"><img class="downarrow" src="https://img.icons8.com/material-rounded/96/000000/low-importance.png"/></a>
     <%- include('../../layout/adminheader') %>
     <section class="mainsection">
-      <div class="left"><%- include('../../layout/adminSidebar') %></div>
+      <div class="left"><%- include('../../layout/adminSideBar') %></div>
       <div class="right">
         <div class="preview">
           <h1 class="mb-5">Demo Vedios</h1>
